test/error/E36.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": {
		"if": {
			"type": "leeeng:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
	]
}
